tests/fixtures/invalid/float_rshift_float.py
# Cannot right shift Float and Float
x: float = 1.0 >> 1.0
